Bug 870864 - use real msgWindow in IMAP tests, r=jorgk