mailnews/base/src/nsMsgWindow.h
@@ -19,6 +19,7 @@
 
 class nsMsgWindow : public nsIMsgWindow,
                     public nsIURIContentListener,
+                    public nsIMsgWindowTest,
                     public nsSupportsWeakReference
 {
 
@@ -30,6 +31,7 @@ public:
   nsresult Init();
   NS_DECL_NSIMSGWINDOW
   NS_DECL_NSIURICONTENTLISTENER
+  NS_DECL_NSIMSGWINDOWTEST
 
 protected:
   virtual ~nsMsgWindow();
@@ -41,6 +43,10 @@ protected:
   // These are used by the backend protocol code to attach
   // notification callbacks to channels, e.g., nsIBadCertListner2.
   nsCOMPtr<nsIInterfaceRequestor> mNotificationCallbacks;
+  // prompt dialog used during testing only
+  nsCOMPtr<nsIPrompt> mPromptDialog;
+  // authorization prompt used during testing only
+  nsCOMPtr<nsIAuthPrompt> mAuthPrompt;
 
   // let's not make this a strong ref - we don't own it.
   nsWeakPtr mRootDocShellWeak;
